InsuranceOrg/force-app/main/default/objects/CommercialVehicle__c/CommercialVehicle__c.object-meta.xml
<CustomObject>
    <label>CommercialVehicle</label>
    <nameField>
        <label>CommercialVehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CommercialVehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>