InsuranceOrg/force-app/main/default/objects/CommercialVehicle__c/fields/Annual_Milage__c.field-meta.xml
<CustomField>
    <fullName>Annual_Milage__c</fullName>
    <label>Annual Milage</label>
    <length>10</length>
    <type>Text</type>
</CustomField>