InsuranceOrg/force-app/main/default/objects/CommercialVehicle__c/fields/Body_Type__c.field-meta.xml
<CustomField>
    <fullName>Body_Type__c</fullName>
    <label>Body Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>