InsuranceOrg/force-app/main/default/objects/CommercialVehicle__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <length>20</length>
    <type>Text</type>
</CustomField>