InsuranceOrg/force-app/main/default/objects/CommercialVehicle__c/fields/Garage_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Garage_Postal_Code__c</fullName>
    <label>Garage Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>