InsuranceOrg/force-app/main/default/objects/CommercialVehicle__c/fields/License_Plate__c.field-meta.xml
<CustomField>
    <fullName>License_Plate__c</fullName>
    <label>License Plate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>