InsuranceOrg/force-app/main/default/objects/CommercialVehicle__c/fields/Owenership_Type__c.field-meta.xml
<CustomField>
    <fullName>Owenership_Type__c</fullName>
    <label>Owenership Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>