InsuranceOrg/force-app/main/default/objects/CommercialVehicle__c/fields/Radius_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Radius_of_Operation__c</fullName>
    <label>Radius of Operation</label>
    <length>5</length>
    <type>Text</type>
</CustomField>