InsuranceOrg/force-app/main/default/objects/CommercialVehicle__c/fields/Trim__c.field-meta.xml
<CustomField>
    <fullName>Trim__c</fullName>
    <label>Trim</label>
    <length>20</length>
    <type>Text</type>
</CustomField>