InsuranceOrg/force-app/main/default/objects/CommercialVehicle__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>