InsuranceOrg/force-app/main/default/objects/CommercialVehicle__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <length>5</length>
    <type>Text</type>
</CustomField>